<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>
   <string name="application_terminal">Factory Test</string>
   <string name="preferences">Preferences</string>
   <string name="reset">Reset term</string>
   <string name="send_email">Email to</string>
   <string name="special_keys">Special keys</string>

   <!-- Preference dialog -->
   <string name="text_preferences">Text</string>

   <string name="title_fontsize_preference">Font size</string>
   <string name="summary_fontsize_preference">Choose character height in points.</string>
   <string name="dialog_title_fontsize_preference">Font size</string>

   <string name="title_color_preference">Colors</string>
   <string name="summary_color_preference">Choose text color.</string>
   <string name="dialog_title_color_preference">Text color</string>

   <string name="keyboard_preferences">Keyboard</string>
   <string name="title_controlkey_preference">Control key</string>
   <string name="summary_controlkey_preference">Choose control key.</string>
   <string name="dialog_title_controlkey_preference">Control key</string>

   <string name="shell_preferences">Shell</string>
   <string name="title_shell_preference">Command line</string>
   <string name="summary_shell_preference">Specify the shell command line.</string>
   <string name="dialog_title_shell_preference">Shell</string>

   <string name="title_initialcommand_preference">Initial command</string>
   <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
   <string name="dialog_title_initialcommand_preference">Initial Command</string>

   <!-- Don't localize these default values -->
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">2</string>
   <string name="default_value_controlkey_preference">0</string>
   <string name="default_value_shell_preference">/system/bin/bash /system/etc/mrvl-auto-test.sh</string>
   <string name="default_value_initialcommand_preference">export PATH=/data/local/bin:$PATH</string>
   <string name="hello_world"><b>Hello, <i>World!</i></b></string>
   
   <string name="factory_title">工厂测试</string>
   <string name="project_title">工程测试</string>
   <string name="factory_message">点击按钮选择工厂测试模式</string>

   <string name="rgb_summary">您是否看到红绿蓝三种颜色？</string>
   <string name="rgb_yes">是</string>
   <string name="rgb_no">没有</string>
   
   <string name="Gps_summary">这里是GPS测试</string>
   <string name="Bt_summary">这里是蓝牙测试</string>
   <string name="Wifi_summary">这里是Wifi测试</string>

    <string name="touch_summary">这里是触摸屏测试,按回退键退出该测试</string>
    <string name="touch_title">触摸测试是否成功？</string>
    <string name="touch_pass">成功</string>
    <string name="touch_fail">失败</string>
   
    <string name="speaker_summary">这里是喇叭测试</string>
    <string name="speaker_pass">我听到声音了</string>
    <string name="speaker_fail">我没有听到声音</string>
   
    <string name="vibrator_summary">这里是振动器测试</string>
    <string name="vibrator_pass">我感觉到了震动</string>
    <string name="vibrator_fail">我没有感觉到震动</string>
   
    <string name="gsensor_summary">这里是重力感应器测试，请晃动您手上的设备。</string>
    <string name="gsensor_pass">我看到了数值的变化。</string>
    <string name="gsensor_fail">我没有看到数值的变化。</string>
    <string name="gsensorx_value">X =0.0</string>
    <string name="gsensory_value">Y =0.0</string>
    <string name="gsensorz_value">Z =0.0</string>

    <string name="light_summary">这里是光感应器测试。</string>
    <string name="light_pass">我看到了数值的变化。</string>
    <string name="light_fail">我没有看到数值的变化。</string>
    
    <string name="pcba_summary">"这里是Gps-pcba测试"</string>
      <string name="pcba_text">"这里是Gps-pcba测试"</string>

    <string name="charger_summary">这里是充电器测试，请插入您的充电器。</string>
    <string name="charger_pass">电池可以正常充电</string>
    <string name="charger_fail">电池无法正常充电</string>

    <string name="camera_summary">这里是摄像头测试</string>
    <string name="camera_pass">我看到了图像</string>
    <string name="camera_fail">我没有看到图像</string>
   
    <string name="compass_summary">这里是指南针测试</string>
    <string name="compass_pass">我看到了数值变化</string>
    <string name="compass_fail">我没有看到数值的变化</string>
   
    <string name="battery_summary">这里是电池测试</string>
    <string name="battery_pass">电池可以正常工作</string>
    <string name="battery_fail">电池无法正常工作</string>

    <string name="data">数据</string>
    
    <string name="led_red_summary">这里LED红灯测试</string>
    <string name="led_red_pass">我看到红灯亮了</string>
    <string name="led_red_fail">我没有看到任何变化</string>
    
    <string name="led_green_summary">这里是LED绿灯测试</string>
    <string name="led_green_pass">我看到绿灯亮了</string>
    <string name="led_green_fail">我没有看到任何变化</string>
    
    <string name="led_blue_summary">这里是LED蓝灯测试</string>
    <string name="led_blue_pass">我看到蓝灯亮了</string>
    <string name="led_blue_fail">我没有看到任何变化</string>
    
    <string name="led_white_summary">这里是LED白灯测试</string>
    <string name="led_white_pass">我看到白灯亮了</string>
    <string name="led_white_fail">我没有看到任何变化</string>
    
    <string name="keyboard_summary">这里是键盘灯测试</string>
    <string name="keyboard_pass">我看到键盘灯亮了</string>
    <string name="keyboard_fail">我没有看到任何变化</string>
    
    <string name="hdmi_summary">这里是HDMI测试,请通过数据线把PAD连接到HDMI显示设备</string>
    <string name="hdmi_pass">我看到电视的图像了</string>
    <string name="hdmi_fail">我没有看到电视上的图像</string>
    
    <string name="battery_info_status_label">"电池状态："</string>
    <string name="battery_info_power_label" >"是否已插电："</string>
    <string name="battery_info_scale_label" >"电池电量："</string>
    <string name="battery_info_level_label" >"电池电量："</string>
    <string name="battery_info_health_label" >"电池运行状况："</string>
    <string name="battery_info_technology_label" >"电池技术："</string>
    <string name="battery_info_voltage_label" >"电池电压："</string>
    <string name="battery_info_voltage_units">"mV"</string>
    <string name="battery_info_status_unknown">"未知"</string>
    <string name="battery_info_status_charging">"正在充电"</string>
    <string name="battery_info_status_discharging">"正在放电"</string>
    <string name="battery_info_status_not_charging">"未在充电"</string>
    <string name="battery_info_status_full">"已满"</string>
    
    <string name="choose_test_case">"请选择测试项"</string>
    
    <string name="host_summary">"这里是U盘测试,请插入U盘"</string>
    <string name="host_instered">"这里是U盘测试,已经插入U盘"</string>    
    <string name="mount_pass">"挂载成功"</string>
    <string name="mount_fail">"挂载失败"</string>
    
    <string name="device_summary">"这里是USB连接电脑测试，请连接USB线到电脑"</string>
    <string name="device_pass">"连接成功"</string>
    <string name="device_fail">"连接失败"</string>
    
    <string name="sd_summary">"这里是外置存储卡测试,请插入外置存储卡"</string>
    <string name="sd_instered">"已经插入外置存储卡"</string>    
    <string name="sd_pass">"挂载成功"</string>
    <string name="sd_fail">"挂载失败"</string>
    
    <string name="mic_summary">"这里是录音测试"</string>
    <string name="mic_text">"点击后开始录音，五秒钟后自动播放"</string>
    <string name="mic_pass">"听到刚才的录音"</string>
    <string name="mic_fail">"没听到刚才的录音"</string>
    <string name="mic_start">"开始录音"</string>
    <string name="mic_play">"录音完毕，播放中"</string>
    <string name="mic_recording">"录音中"</string>
    <string name="mic_playing">"录音完毕，开始播放"</string>
    <string name="mic_complete">"播放完毕"</string>
    
    
    <string name="hello">Hello World, GpsActivity!</string>
    <string name="app_name">GpsTools</string>
    <string name="latitude_and_longitude">经纬度:</string>
    <string name="height_and_sudu">高度和速度:</string>
    <string name="gmt_time">GMT时间:</string>
    <string name="visible_satellite">可见卫星:</string>
    <string name="available_satellite">可用卫星:</string>
    <string name="time_to_first_fix">首次定位时间:</string>
    <string name="NMEA_data">NMEA数据:</string>
    <string name="State_data">卫星信号数据:</string>
    <string name="gtm_time">GMT时间：</string>
    <string name="v_state">可视卫星：</string>
    <string name="a_state">可用卫星：</string>
    <string name="ttf_time">首次定位时间： </string>
    <string name="hh">时</string>
    <string name="mm">分</string>
    <string name="ss">秒</string>
    <string name="sl_no">卫星编号：</string>
    <string name="sl_elevation"> 卫星仰角: </string>
    <string name="sl_azimuth">  卫星方位角: </string>
    <string name="sign"> 讯号噪声比: </string>
    <string name="nn">"\n</string>
    <string name="high">高度: </string>
    <string name="velocity"> 速度: </string>
    <string name="latitude">维度:</string>
    <string name="precision">\n经度:</string>
    <string name="err">无法获取地理信息</string>
    
    <string name="gps_name">GPS定位测试</string>
    <string name="video_name">高清视频播放测试</string>
    
    <string name="sd_mounted">存储设备已经可用</string>
    <string name="sd_unmounted">存储设备不可用</string>
    <string name="ums_enable">已经连接到电脑</string>
    <string name="ums_disable">未连接到电脑</string>
    <string name="video_test_err">测试文件不存在，请将test.avi放到存储卡下，内置外置都可以</string>
    
    <string name="lcd_test">点击触摸屏以跳转到下一个三原色页面</string>
    <string name="start_test">"开始测试"</string>
    <string name="test_gps_latitude">维度: </string>
    <string name="test_gps_longitude">经度: </string>
    <string name="test_gps_erro">获得位置信息中...</string>
    <string name="gps_pass">定位成功</string>
    <string name="gps_fail">定位失败</string>
    <string name="test_gps_time">测试已用时间： </string>
    <string name="gps_second"> 秒</string>
    
    <string name="rp_start">测试开始</string>
	<string name="rp_stop">测试停止</string>
	<string name="rp_title">这里是音频输入输出回音测试</string>
	<string name="rp_pass">能听到输入的声音</string>
	<string name="rp_fail">不能听到输入的声音</string>
	
	<string name="headphone_start">开始测试</string>
	<string name="headphone_title">这里是耳机测试</string>
	<string name="headphone_summary">请插入耳机,点击开始测试,并对麦克发声</string>
	<string name="headphone_pass">能从耳机里听到声音</string>
	<string name="headphone_fail">不能从耳机里听到声音</string>
	
	<string name="select_back">全不选</string>
	<string name="select_all">全选</string>
	<string name="base_title">是否要退出测试？</string>
	<string name="base_pos">是</string>
	<string name="base_neg">否</string>
	
	<string name="base_retest">重新测试</string>
	<string name="base_cancel">取消</string>
	<string name="success">成功</string>
	<string name="fail">失败</string>
    
</resources>
