<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_weight="3"
        android:orientation="vertical">
            <TextView
                android:id="@+id/gsensor_summary"
                android:gravity="center_horizontal"
                android:textSize="@dimen/content_text_size"
                android:text="@string/gsensor_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            
            <TextView
                android:textSize="@dimen/content_text_size"
                android:gravity="center_horizontal"
                android:id="@+id/gsensorx_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gsensorx_value">
            </TextView>
             <TextView
                android:textSize="@dimen/content_text_size"
                android:gravity="center_horizontal"
                android:id="@+id/gsensory_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gsensory_value">
            </TextView>
             <TextView
                android:textSize="@dimen/content_text_size"
                android:gravity="center_horizontal"
                android:id="@+id/gsensorz_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gsensorz_value">
            </TextView>
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/gsensor_pass"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/gsensor_pass"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    
        <Button
            android:id="@+id/gsensor_fail"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/gsensor_fail"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    
</LinearLayout>

