<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"   
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="@drawable/bg">
 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/flatitude_and_longitude"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/latitude_and_longitude"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/fheight_and_sudu"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/height_and_sudu"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
    	android:layout_marginTop="40dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/fgmt_time"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/gmt_time"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/fvisible_satellite"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/visible_satellite"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
           android:layout_marginTop="40dip"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/ftime_to_first_fix"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/time_to_first_fix"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/favailable_satellite"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/available_satellite"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
           android:layout_marginTop="20dip"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/fNMEA_data"
            android:layout_width="match_parent" 
            android:layout_height="match_parent" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/NMEA_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
    </RelativeLayout><!--
    <RelativeLayout
           android:layout_width="fill_parent"
           android:layout_height="200dip"
        >
        <TextView  
            android:id="@+id/fState_data"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:text="@string/State_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
    </RelativeLayout>
    
    --><LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button android:id="@+id/gps_pass" 
            android:textSize="@dimen/btn_text_size"
            android:text="@string/gps_pass"
            android:layout_weight="1" 
            android:layout_height="100dip" 
            android:layout_width="wrap_content">
        </Button>

        <Button android:id="@+id/gps_fail" 
            android:layout_weight="1"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/gps_fail"
            android:layout_width="wrap_content"
            android:layout_height="100dip">
        </Button>
    </LinearLayout>
    
</LinearLayout>
