<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >
       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/latitude_and_longitude"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/latitude_and_longitude"
            android:layout_alignParentLeft="true"
            
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/height_and_sudu"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/height_and_sudu"
            android:layout_alignParentRight="true"
            
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
    	android:layout_marginTop="40dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/gmt_time"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/gmt_time"
            android:layout_alignParentLeft="true"
            
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/visible_satellite"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/visible_satellite"
            android:layout_alignParentRight="true"
            
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
    android:layout_marginTop="40dip"
           android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/time_to_first_fix"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/time_to_first_fix"
            android:layout_alignParentLeft="true"

            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView  
            android:id="@+id/available_satellite"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_text_size"
            android:text="@string/available_satellite"
            android:layout_alignParentRight="true"

            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </RelativeLayout>
    <RelativeLayout
           android:layout_marginTop="40dip"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
        >
        <TextView  
            android:id="@+id/NMEA_data"
            android:layout_width="match_parent" 
            android:layout_height="match_parent" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/NMEA_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
    </RelativeLayout>
    <RelativeLayout
           android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView  
            android:id="@+id/State_data"
            android:layout_width="match_parent" 
            android:layout_height="match_parent" 
            android:textSize="@dimen/content_text_size"
            android:text="@string/State_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        
    </RelativeLayout>
</LinearLayout>