<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/headphone_summary"
	    android:textSize="@dimen/content_text_size"
	    android:layout_weight="3"
	    android:gravity="center"
    />
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headphone_Button01"
        android:textSize="@dimen/btn_text_size"
	 android:text="@string/headphone_start"
        android:layout_weight="1" 
        android:layout_gravity="center_horizontal"
        />
      
    <LinearLayout android:id="@+id/headphone_layout1"
    	android:gravity="center_horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" 
        android:orientation="horizontal">

        <Button android:id="@+id/headphone_pass" 
            android:textSize="@dimen/btn_text_size"
            android:text="@string/headphone_pass"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>

        <Button android:id="@+id/headphone_fail" 
            android:layout_weight="1"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/headphone_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    
</LinearLayout>
