<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical">        
        
    <TextView
        android:gravity="center"
        android:text="@string/mic_text"
        android:id="@+id/mic_text"
        android:layout_weight="3"
        android:textSize="@dimen/content_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mic_start"
        android:layout_weight="1" 
        android:textSize="@dimen/btn_text_size"
        android:text="@string/mic_start"
        android:layout_gravity="center_horizontal"/>
        
    <LinearLayout android:id="@+id/mic_layout"
    	android:gravity="center_horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" 
        android:orientation="horizontal">

        <Button android:id="@+id/mic_pass" 
            android:textSize="@dimen/btn_text_size"
            android:text="@string/mic_pass"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Button>

        <Button android:id="@+id/mic_fail" 
            android:layout_weight="1"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/mic_fail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Button>
    </LinearLayout>

</LinearLayout>