<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:textSize="@dimen/content_text_size"
      android:gravity="center_horizontal"
      android:layout_marginTop="80dip"
      android:text="@string/led_red_summary"
      android:id="@+id/led_red_summary">
  </TextView>
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal">
      
      <Button android:id="@+id/led_red_pass"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/btn_text_size"
          android:text="@string/led_red_pass"
          android:layout_weight="1">
      </Button>
      
      <Button android:id="@+id/led_red_fail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/btn_text_size"
          android:text="@string/led_red_fail"
          android:layout_weight="1">
      </Button>
  </LinearLayout>
  
</LinearLayout>
