<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/speaker_summary"
                android:gravity="center_horizontal"
                android:textSize="@dimen/content_text_size"
                android:text="@string/speaker_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/speaker_pass"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/speaker_pass"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    
        <Button
            android:id="@+id/speaker_fail"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/speaker_fail"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>
    
</LinearLayout>

